--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,13 +22,14 @@ jobs:
             set -euo pipefail
             cd ~
             mkdir -p ~/bin
-            curl -sSLO https://github.com/segmentio/terraform-docs/releases/download/v${TERRAFORM_DOCS_VERSION}/terraform-docs-v${TERRAFORM_DOCS_VERSION}-linux-amd64
-            [ $(sha256sum terraform-docs-v${TERRAFORM_DOCS_VERSION}-linux-amd64 | cut -f1 -d' ') = ${TERRAFORM_DOCS_SHA256SUM} ]
-            chmod 755 terraform-docs-v${TERRAFORM_DOCS_VERSION}-linux-amd64
-            mv terraform-docs-v${TERRAFORM_DOCS_VERSION}-linux-amd64 ~/bin/terraform-docs
+            echo "Installing terraform-docs version v${TERRAFORM_DOCS_VERSION}"
+            curl -sSLO https://github.com/terraform-docs/terraform-docs/releases/download/v${TERRAFORM_DOCS_VERSION}/terraform-docs-v${TERRAFORM_DOCS_VERSION}-linux-amd64.tar.gz
+            curl -sSLO https://github.com/terraform-docs/terraform-docs/releases/download/v${TERRAFORM_DOCS_VERSION}/terraform-docs-v${TERRAFORM_DOCS_VERSION}.sha256sum
+            [ $(sha256sum terraform-docs-v${TERRAFORM_DOCS_VERSION}-linux-amd64.tar.gz | cut -f1 -d' ') = $(grep linux-amd64 terraform-docs-v${TERRAFORM_DOCS_VERSION}.sha256sum | cut -f1 -d' ') ]
+            tar -xf terraform-docs-v${TERRAFORM_DOCS_VERSION}-linux-amd64.tar.gz
+            mv terraform-docs ~/bin/terraform-docs
           environment:
             TERRAFORM_DOCS_VERSION: "0.16.0"
-            TERRAFORM_DOCS_SHA256SUM: "0d1e42d6fcb15b14027ae8efb794edb1cd7faa7a32507ccad449340529d04937"
       - run: echo 'export PATH=~/bin:$PATH' >> $BASH_ENV
       - run: scripts/update-docs
       - run: scripts/format-files
